parser.output
Gramática

    0 $accept: program $end

    1 program: lines

    2 lines: line
    3      | lines line

    4 line: print_statement SEMICOLON
    5     | assignment SEMICOLON

    6 print_statement: PRINT LPAREN expression RPAREN
    7                | PRINT LPAREN RPAREN

    8 assignment: IDENTIFIER '=' expression

    9 expression: NUMBER
   10           | IDENTIFIER
   11           | expression PLUS expression
   12           | expression MINUS expression
   13           | expression MULT expression
   14           | expression DIV expression
   15           | LPAREN expression RPAREN


Terminales con las reglas donde aparecen

$end (0) 0
'=' (61) 8
error (256)
NUMBER (258) 9
PLUS (259) 11
MINUS (260) 12
MULT (261) 13
DIV (262) 14
LPAREN (263) 6 7 15
RPAREN (264) 6 7 15
SEMICOLON (265) 4 5
PRINT (266) 6 7
IDENTIFIER (267) 8 10


No terminales con las reglas donde aparecen

$accept (14)
    en la izquierda: 0
program (15)
    en la izquierda: 1, en la derecha: 0
lines (16)
    en la izquierda: 2 3, en la derecha: 1 3
line (17)
    en la izquierda: 4 5, en la derecha: 2 3
print_statement (18)
    en la izquierda: 6 7, en la derecha: 4
assignment (19)
    en la izquierda: 8, en la derecha: 5
expression (20)
    en la izquierda: 9 10 11 12 13 14 15, en la derecha: 6 8 11 12
    13 14 15


estado 0

    0 $accept: . program $end

    PRINT       desplazar e ir al estado 1
    IDENTIFIER  desplazar e ir al estado 2

    program          ir al estado 3
    lines            ir al estado 4
    line             ir al estado 5
    print_statement  ir al estado 6
    assignment       ir al estado 7


estado 1

    6 print_statement: PRINT . LPAREN expression RPAREN
    7                | PRINT . LPAREN RPAREN

    LPAREN  desplazar e ir al estado 8


estado 2

    8 assignment: IDENTIFIER . '=' expression

    '='  desplazar e ir al estado 9


estado 3

    0 $accept: program . $end

    $end  desplazar e ir al estado 10


estado 4

    1 program: lines .
    3 lines: lines . line

    PRINT       desplazar e ir al estado 1
    IDENTIFIER  desplazar e ir al estado 2

    $default  reduce usando la regla 1 (program)

    line             ir al estado 11
    print_statement  ir al estado 6
    assignment       ir al estado 7


estado 5

    2 lines: line .

    $default  reduce usando la regla 2 (lines)


estado 6

    4 line: print_statement . SEMICOLON

    SEMICOLON  desplazar e ir al estado 12


estado 7

    5 line: assignment . SEMICOLON

    SEMICOLON  desplazar e ir al estado 13


estado 8

    6 print_statement: PRINT LPAREN . expression RPAREN
    7                | PRINT LPAREN . RPAREN

    NUMBER      desplazar e ir al estado 14
    LPAREN      desplazar e ir al estado 15
    RPAREN      desplazar e ir al estado 16
    IDENTIFIER  desplazar e ir al estado 17

    expression  ir al estado 18


estado 9

    8 assignment: IDENTIFIER '=' . expression

    NUMBER      desplazar e ir al estado 14
    LPAREN      desplazar e ir al estado 15
    IDENTIFIER  desplazar e ir al estado 17

    expression  ir al estado 19


estado 10

    0 $accept: program $end .

    $default  aceptar


estado 11

    3 lines: lines line .

    $default  reduce usando la regla 3 (lines)


estado 12

    4 line: print_statement SEMICOLON .

    $default  reduce usando la regla 4 (line)


estado 13

    5 line: assignment SEMICOLON .

    $default  reduce usando la regla 5 (line)


estado 14

    9 expression: NUMBER .

    $default  reduce usando la regla 9 (expression)


estado 15

   15 expression: LPAREN . expression RPAREN

    NUMBER      desplazar e ir al estado 14
    LPAREN      desplazar e ir al estado 15
    IDENTIFIER  desplazar e ir al estado 17

    expression  ir al estado 20


estado 16

    7 print_statement: PRINT LPAREN RPAREN .

    $default  reduce usando la regla 7 (print_statement)


estado 17

   10 expression: IDENTIFIER .

    $default  reduce usando la regla 10 (expression)


estado 18

    6 print_statement: PRINT LPAREN expression . RPAREN
   11 expression: expression . PLUS expression
   12           | expression . MINUS expression
   13           | expression . MULT expression
   14           | expression . DIV expression

    PLUS    desplazar e ir al estado 21
    MINUS   desplazar e ir al estado 22
    MULT    desplazar e ir al estado 23
    DIV     desplazar e ir al estado 24
    RPAREN  desplazar e ir al estado 25


estado 19

    8 assignment: IDENTIFIER '=' expression .
   11 expression: expression . PLUS expression
   12           | expression . MINUS expression
   13           | expression . MULT expression
   14           | expression . DIV expression

    PLUS   desplazar e ir al estado 21
    MINUS  desplazar e ir al estado 22
    MULT   desplazar e ir al estado 23
    DIV    desplazar e ir al estado 24

    $default  reduce usando la regla 8 (assignment)


estado 20

   11 expression: expression . PLUS expression
   12           | expression . MINUS expression
   13           | expression . MULT expression
   14           | expression . DIV expression
   15           | LPAREN expression . RPAREN

    PLUS    desplazar e ir al estado 21
    MINUS   desplazar e ir al estado 22
    MULT    desplazar e ir al estado 23
    DIV     desplazar e ir al estado 24
    RPAREN  desplazar e ir al estado 26


estado 21

   11 expression: expression PLUS . expression

    NUMBER      desplazar e ir al estado 14
    LPAREN      desplazar e ir al estado 15
    IDENTIFIER  desplazar e ir al estado 17

    expression  ir al estado 27


estado 22

   12 expression: expression MINUS . expression

    NUMBER      desplazar e ir al estado 14
    LPAREN      desplazar e ir al estado 15
    IDENTIFIER  desplazar e ir al estado 17

    expression  ir al estado 28


estado 23

   13 expression: expression MULT . expression

    NUMBER      desplazar e ir al estado 14
    LPAREN      desplazar e ir al estado 15
    IDENTIFIER  desplazar e ir al estado 17

    expression  ir al estado 29


estado 24

   14 expression: expression DIV . expression

    NUMBER      desplazar e ir al estado 14
    LPAREN      desplazar e ir al estado 15
    IDENTIFIER  desplazar e ir al estado 17

    expression  ir al estado 30


estado 25

    6 print_statement: PRINT LPAREN expression RPAREN .

    $default  reduce usando la regla 6 (print_statement)


estado 26

   15 expression: LPAREN expression RPAREN .

    $default  reduce usando la regla 15 (expression)


estado 27

   11 expression: expression . PLUS expression
   11           | expression PLUS expression .
   12           | expression . MINUS expression
   13           | expression . MULT expression
   14           | expression . DIV expression

    MULT  desplazar e ir al estado 23
    DIV   desplazar e ir al estado 24

    $default  reduce usando la regla 11 (expression)


estado 28

   11 expression: expression . PLUS expression
   12           | expression . MINUS expression
   12           | expression MINUS expression .
   13           | expression . MULT expression
   14           | expression . DIV expression

    MULT  desplazar e ir al estado 23
    DIV   desplazar e ir al estado 24

    $default  reduce usando la regla 12 (expression)


estado 29

   11 expression: expression . PLUS expression
   12           | expression . MINUS expression
   13           | expression . MULT expression
   13           | expression MULT expression .
   14           | expression . DIV expression

    $default  reduce usando la regla 13 (expression)


estado 30

   11 expression: expression . PLUS expression
   12           | expression . MINUS expression
   13           | expression . MULT expression
   14           | expression . DIV expression
   14           | expression DIV expression .

    $default  reduce usando la regla 14 (expression)
